--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.simple.app.activity.LoginActivity">
+    tools:context="com.simple.mail.activity.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
