--- a/app/src/main/res/menu/menu_mail_list.xml
+++ b/app/src/main/res/menu/menu_mail_list.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.simple.app.simplemailbox.com.simple.jmail.activity.MailListActivity">
+    tools:context="com.simple.mail.simplemailbox.com.simple.jmail.activity.MailListActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
